Paselc 745 problema creazione stazione (#297)